--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,72 @@ dependencies = [
 [dependency-groups]
 dev = [
     "mypy>=1.16.0",
+    "ruff>=0.11.13",
 ]
 
+# settings mypy
 [tool.mypy]
 strict = true
+plugins = [
+    "pydantic.mypy",
+]
+
+# ruff settings
+[tool.ruff]
+required-version = ">=0.11.13"
+
+#для корня нашего проекта
+src = [
+    "movie",
+]
+
+# Exclude a variety of commonly ignored directories.
+exclude = [
+    ".bzr",
+    ".direnv",
+    ".eggs",
+    ".git",
+    ".git-rewrite",
+    ".hg",
+    ".ipynb_checkpoints",
+    ".mypy_cache",
+    ".nox",
+    ".pants.d",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".svn",
+    ".tox",
+    ".venv",
+    ".vscode",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+    "node_modules",
+    "site-packages",
+    "venv",
+    ".venv",
+]
+
+# Same as Black.
+line-length = 88
+indent-width = 4
+
+# Assume Python 3.13
+target-version = "py313"
+
+[tool.ruff.lint]
+select = [
+    "FAST",
+    "ANN", # flake8-annotations (ANN)
+    "FAST", # FastAPI (FAST)
+]
+ignore = [
+]
+
+# Allow fix for all enabled rules (when `--fix`) is provided.
+fixable = ["ALL"]
+unfixable = []
