--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
 [dependency-groups]
 dev = [
     "coverage>=7.9.1",
+    "httpx>=0.28.1",
     "mypy>=1.16.0",
     "pytest>=8.4.1",
     "ruff>=0.11.13",
