--- a/.github/workflows/hello_actions.yaml
+++ b/.github/workflows/hello_actions.yaml
@@ -6,5 +6,5 @@ jobs:
     hello-job:
         runs-on: ubuntu-latest
         steps:
-            -   name: My first step in GH Actions
+            -   name: My first step in GitHub Actions
                 run: echo "Hello action on ${{ github.event_name }}"
