--- a/.github/workflows/hello_actions.yaml
+++ b/.github/workflows/hello_actions.yaml
@@ -10,7 +10,7 @@ jobs:
                 run: echo "Hello action on ${{ github.event_name }}"
 
             -   name: Second GH Action by ${{ github.actor }}"
-                run: echo "Hello actin in ${{ github.repository }} ref- ${{ github.ref }}
+                run: echo "Hello actin in ${{ github.repository }} ref- ${{ github.ref }}"
 
             -   name: This GH Actions runnin on ${{ runner.os }}
-                run: echo "Action job status ${{ job.status }}
+                run: echo "Action job status ${{ job.status }}"
