--- a/.github/workflows/hello_actions.yaml
+++ b/.github/workflows/hello_actions.yaml
@@ -8,3 +8,9 @@ jobs:
         steps:
             -   name: My first step in GH Actions
                 run: echo "Hello action on ${{ github.event_name }}"
+
+            -   name: Second GH Action by ${{ github.actor }}"
+                run: echo "Hello actin in ${{ github.repository }} ref- ${{ github.ref }}"
+
+            -   name: This GH Actions runnin on ${{ runner.os }}
+                run: echo "Action job status ${{ job.status }} "
