--- a/.github/workflows/hello_actions.yaml
+++ b/.github/workflows/hello_actions.yaml
@@ -9,6 +9,9 @@ jobs:
             -   name: My first step in GH Actions
                 run: echo "Hello action on ${{ github.event_name }}"
 
+            -   name: GH Action
+                run: echo "GH Action ${{github.action}}"
+
             -   name: Second GH Action by ${{ github.actor }}"
                 run: echo "Hello actin in ${{ github.repository }} ref- ${{ github.ref }}"
 
