--- a/.github/workflows/python-check.yaml
+++ b/.github/workflows/python-check.yaml
@@ -3,10 +3,9 @@ on:
     push:
         branches:
             - master
-
 jobs:
-    linter:
+    lint:
         runs-on: ubuntu-latest
         steps:
-            -   name: Placeholder GH Actions step
-                run: echo "Hello action"
+            -   name: Placeholder GH Action step
+                run: echo "Run Action"
