--- a/.github/workflows/hello-actions.yaml
+++ b/.github/workflows/hello-actions.yaml
@@ -1,10 +1,12 @@
-name: Hello World 🌍
+
+name: Hello GH Actions 🌍
+
 on:
     push:
 
 jobs:
-    hello-job:
+    Hello-world:
         runs-on: ubuntu-latest
         steps:
-            -   name: My first step in GH Actions
-                run: echo "Hello action!"
+            - name: My first step in GH Actions
+              run: echo "Hello action!"
