--- a/.github/workflows/hello-actions.yaml
+++ b/.github/workflows/hello-actions.yaml
@@ -7,5 +7,5 @@ jobs:
     Hello-world:
         runs-on: ubuntu-latest
         steps:
-            -   name: My first step in GH Action
-                run: echo "Hello actions!"
+            - name: My first step in GitHub Actions
+              run: echo "Hello from both branches!"
