--- a/.github/workflows/hello-action.yaml
+++ b/.github/workflows/hello-action.yaml
@@ -7,5 +7,10 @@ jobs:
     Hello-world:
         runs-on: ubuntu-latest
         steps:
-            - name: My first step in GitHub Actions
-              run: echo "Hello action on ${{github.event_name}}!"
+            -   name: My first step in GitHub Actions
+                run: echo "Hello action on ${{github.event_name}}!"
+
+            -   name: Second GH Action by ${{github.actor}}
+                run: echo "Hello action on ${{github.repository}} ref:: ${{github.ref}}"
+            - name: This GH Action rannin is on ${{runner.os}}
+              run: Action job status ${{job.status}}
