--- a/.github/workflows/hello-action.yaml
+++ b/.github/workflows/hello-action.yaml
@@ -11,6 +11,6 @@ jobs:
                 run: echo "Hello action on ${{github.event_name}}!"
 
             -   name: Second GH Action by ${{github.actor}}
-                run: echo "Hello action on ${{github.repository}} ref:: ${{github.ref}}"
+                run: echo "Hello action on ${{github.repository}} ref - ${{github.ref}}"
             -   name: This GH Action rannin is on ${{runner.os}}
                 run: echo "Action job status ${{job.status}}"
