--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dev = [
     "coverage>=7.9.1",
     "httpx>=0.28.1",
     "mypy>=1.16.0",
+    "pre-commit>=4.2.0",
     "pytest>=8.4.1",
     "pytest-cov>=6.2.1",
     "ruff>=0.11.13",
