--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -25,4 +25,4 @@ jobs:
           python -m pip install --upgrade pip
           pip install "black == 25.1.0"
       - name: Black ⬛
-        run: blck ./
+        run: black --check --verbose ./
