--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -8,7 +8,7 @@ on:
     branches:
       - master
     paths:
-      - ".github.workflows/**"
+      - ".github/workflows/**"
       - "movie/**"
 
 
@@ -20,7 +20,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-      - name: 'Install Black'
+      - name: Install Black
         run: |
           python -m pip install --upgrade pip
           pip install "black == 25.1.0"
