--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -8,12 +8,23 @@ on:
     branches:
       - master
     paths:
+      - ".github/workflows/**"
       - "movie/**"
 
 
 jobs:
-  lint:
+  run-black:
     runs-on: ubuntu-latest
     steps:
-      - name: Placeholder GH Action step
-        run: echo "Run check fastapi-movie"
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+
+      - name: Install Black
+        run: |
+          python -m pip install --upgrade pip
+          pip install "black == 25.1.0"
+      - name: Black ⬛
+        run: black --check --diff ./
