--- a/.github/workflows/hello-actions.yaml
+++ b/.github/workflows/hello-actions.yaml
@@ -3,7 +3,8 @@ on:
     push:
 
 jobs:
-    runs-on: ubuntu-latest
-    steps:
-        -   name: My first step in GH Actions
-            run: echo "Hello action!"
+    hello-actions:
+        runs-on: ubuntu-latest
+        steps:
+            -   name: My first step in GH Actions
+                run: echo "Hello action!"
