--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -28,7 +28,7 @@ jobs:
           pip install "black == 25.1.0"
       - name: Black ⬛
         run: black --check --diff ./
-  list-dependensies:
+  run-mypy:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v4
@@ -40,5 +40,5 @@ jobs:
             enable-cache: true
         - name: Install the project
           run: uv sync --locked --all-extras --dev
-        - name: List dependencies
-          run: uv tree
+        - name: Run mypy
+          run: mypy movie
