--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -42,4 +42,4 @@ jobs:
         - name: Install the project
           run: uv sync --locked --all-extras --dev
         - name: Run mypy
-          run: mypy movie
+          run: python -m mypy movie
