--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -35,11 +35,11 @@ jobs:
         - uses: actions/checkout@v4
         - uses: actions/setup-python@v5
         - name: Setup uv
-          uses: astral-sh/setup-uv@v5
+          uses: astral-sh/setup-uv@v6
           with:
             pyproject-file: 'pyproject.toml'
             enable-cache: true
         - name: Install the project
           run: uv sync --locked --all-extras --dev
         - name: Run mypy
-          run: python -m mypy movie
+          run: mypy movie
