--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -38,4 +38,4 @@ jobs:
         - name: Install the project
           run: uv sync --locked --all-extras --dev
         - name: Run mypy
-          run: mypy movie
+          run: uv run mypy movie
