--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -28,3 +28,14 @@ jobs:
           pip install "black == 25.1.0"
       - name: Black ⬛
         run: black --check --diff ./
+  run-mypy:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v4
+        - uses: actions/setup-python@v5
+        - name: Setup uv
+          uses: astral-sh/setup-uv@v6
+        - name: Install the project
+          run: uv sync --locked --all-extras --dev
+        - name: Run mypy
+          run: uv run mypy movie
