--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -12,7 +12,7 @@ on:
       - "movie/**"
 
 jobs:
-  run-black:
+  run-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +33,14 @@ jobs:
           enable-cache: true
       - name: Install the project
         run: uv sync --locked --all-extras --dev
+      - name: Run ruff check --diff
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: 'check --diff'
+          version-file: 'pyproject.toml'
       - name: Run ruff
         uses: astral-sh/ruff-action@v3
+        with:
+          version-file: 'pyproject.toml'
       - name: Run mypy
         run: uv run mypy movie
