--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -11,9 +11,8 @@ on:
       - ".github/workflows/**"
       - "movie/**"
 
-
 jobs:
-  run-black:
+  run-checks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -21,21 +20,27 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
-
       - name: Install Black
         run: |
           python -m pip install --upgrade pip
           pip install "black == 25.1.0"
       - name: Black ⬛
         run: black --check --diff ./
-  run-mypy:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v4
-        - uses: actions/setup-python@v5
-        - name: Setup uv
-          uses: astral-sh/setup-uv@v6
-        - name: Install the project
-          run: uv sync --locked --all-extras --dev
-        - name: Run mypy
-          run: uv run mypy movie
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          pyproject-file: 'pyproject.toml'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run ruff check --diff
+        uses: astral-sh/ruff-action@v3
+        with:
+          args: 'check --diff'
+          version-file: 'pyproject.toml'
+      - name: Run ruff
+        uses: astral-sh/ruff-action@v3
+        with:
+          version-file: 'pyproject.toml'
+      - name: Run mypy
+        run: uv run mypy movie
