--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -44,3 +44,9 @@ jobs:
           version-file: 'pyproject.toml'
       - name: Run mypy
         run: uv run mypy movie
+  run-test:
+    runs-on: ubuntu-latest
+    needs:
+      - run-checks
+    steps:
+      - run: echo Hello tests!!!
