run python tests in ci

--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -16,7 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
@@ -49,4 +48,18 @@ jobs:
     needs:
       - run-checks
     steps:
-      - run: echo Hello tests!
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          pyproject-file: 'pyproject.toml'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run tests
+        run: uv run pytest
+        env:
+          TESTING: 1
