--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -43,23 +43,23 @@ jobs:
           version-file: 'pyproject.toml'
       - name: Run mypy
         run: uv run mypy movie
-#  run-test:
-#    runs-on: ubuntu-latest
-#    needs:
-#      - run-checks
-#    steps:
-#      - uses: actions/checkout@v4
-#      - uses: actions/setup-python@v5
-#        with:
-#          python-version-file: '.python-version'
-#      - name: Setup uv
-#        uses: astral-sh/setup-uv@v5
-#        with:
-#          pyproject-file: 'pyproject.toml'
-#          enable-cache: true
-#      - name: Install the project
-#        run: uv sync --locked --all-extras --dev
-#      - name: Run tests
-#        run: uv run pytest
-#        env:
-#          TESTING: 1
+  run-test:
+    runs-on: ubuntu-latest
+    needs:
+      - run-checks
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          pyproject-file: 'pyproject.toml'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run tests
+        run: uv run pytest
+        env:
+          TESTING: 1
