--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -47,6 +47,17 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - run-checks
+    services:
+      redis:
+        image: redis
+        # Set health checks to wait until redis has started
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+#        ports:
+#          - 6379: 6379
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -63,3 +74,4 @@ jobs:
         run: uv run pytest
         env:
           TESTING: 1
+          REDIS_PORT: 6379
