--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -55,8 +55,8 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-#        ports:
-#          - 6379: 6379
+        ports:
+          - 6379:6379
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
