--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -1,5 +1,4 @@
 name: Python GH Actions check 🐍
-
 on:
   push:
     branches:
@@ -16,7 +15,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
           python-version-file: '.python-version'
@@ -44,3 +42,35 @@ jobs:
           version-file: 'pyproject.toml'
       - name: Run mypy
         run: uv run mypy movie
+  run-test:
+    runs-on: ubuntu-latest
+    needs:
+      - run-checks
+    services:
+      redis:
+        image: redis
+        # Set health checks to wait until redis has started
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 6379:6379
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version-file: '.python-version'
+      - name: Setup uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          pyproject-file: 'pyproject.toml'
+          enable-cache: true
+      - name: Install the project
+        run: uv sync --locked --all-extras --dev
+      - name: Run tests
+        run: uv run pytest
+        env:
+          TESTING: 1
+          REDIS_PORT: 6379
