--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -44,8 +44,8 @@ jobs:
         run: uv run mypy movie
   run-test:
     runs-on: ubuntu-latest
-    needs:
-      - run-checks
+#    needs:
+#      - run-checks
     services:
       redis:
         image: redis
@@ -70,7 +70,13 @@ jobs:
       - name: Install the project
         run: uv sync --locked --all-extras --dev
       - name: Run tests
-        run: uv run pytest
+        run: uv run pytest --cov-report=xml
         env:
           TESTING: 1
           REDIS_PORT: 6379
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            slug: misha42195/fastapi-shortener-project
+            dry_run: ${{ env.ACT }}
