--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -44,8 +44,8 @@ jobs:
         run: uv run mypy movie
   run-test:
     runs-on: ubuntu-latest
-#    needs:
-#      - run-checks
+    needs:
+      - run-checks
     services:
       redis:
         image: redis
