--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -69,15 +69,16 @@ jobs:
           enable-cache: true
       - name: Install the project
         run: uv sync --locked --all-extras --dev
-      - name: Run python tests
+      - name: Run tests
         run: uv run pytest movie --cov=movie --cov-report=xml:coverage.xml
         env:
           TESTING: 1
           REDIS_PORT: 6379
-      - name: Upload coverage report to Codecov
+      - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: coverage.xml
-          dry_run: ${{ env.ACT }}
-          fail_ci_if_error: 'true'
+            token: ${{ secrets.CODECOV_TOKEN }}
+            slug: misha42195/fastapi-shortener-project
+            files: coverage.xml
+            fail_ci_if_error: 'true'
+            dry_run: ${{ env.ACT }}
