feat(config): add application settings management via pydantic-settings

--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   run-checks:
     runs-on: ubuntu-latest
+    container: node:20-bookworm-slim
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -73,7 +74,8 @@ jobs:
         run: uv run pytest movie --cov=movie --cov-report=xml:coverage.xml
         env:
           TESTING: 1
-          REDIS_PORT: 6379
+          MOVIE__REDIS__CONNECTION__HOST: redis
+          MOVIE__REDIS__CONNECTION__PORT: 6379
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
