set new variable in github action python-checks.yaml

--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Run mypy
         run: uv run mypy movie
   run-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - run-checks
     services:
