--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "FastAPI Movie"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "fastapi[standard,standart]>=0.115.12",
+    "fastapi[standard]>=0.115.12",
     "redis[hiredis]>=6.2.0",
     "typer>=0.15.3",
 ]
