--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -30,7 +30,7 @@ jobs:
           pyproject-file: 'pyproject.toml'
           enable-cache: true
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --locked
       - name: Run ruff check --diff
         uses: astral-sh/ruff-action@v3
         with:
@@ -43,7 +43,7 @@ jobs:
       - name: Run mypy
         run: uv run mypy movie
   run-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs:
       - run-checks
     services:
