--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -75,6 +75,10 @@ jobs:
           TESTING: 1
           MOVIE__REDIS__CONNECTION__HOST: redis
           MOVIE__REDIS__CONNECTION__PORT: 6379
+      - name: 🛠 Install system dependencies for Codecov
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y git curl gnupg
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
