--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -78,8 +78,8 @@ jobs:
       - name: 🛠 Install system dependencies for Codecov
         shell: bash
         run: |
-          sudo apt-get update
-          sudo apt-get install -y git curl gnupg
+            apt-get update
+            apt-get install -y git curl gnupg
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
