--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -50,7 +50,7 @@ jobs:
     services:
       redis:
         image: redis
-        # Set health checks to wait until redis has started.
+        # Set health checks to wait until redis has started
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
