--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -13,6 +13,7 @@ on:
 jobs:
   run-checks:
     runs-on: ubuntu-latest
+    container: node:20-bookworm-slim
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
