--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -44,6 +44,7 @@ jobs:
         run: uv run mypy movie
   run-test:
     runs-on: ubuntu-latest
+    container: node:20-bookworm-slim
     needs:
       - run-checks
     services:
@@ -55,8 +56,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-        ports:
-          - 6380:6380
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
