--- a/.github/workflows/python-checks.yaml
+++ b/.github/workflows/python-checks.yaml
@@ -74,6 +74,8 @@ jobs:
           TESTING: 1
           MOVIE__REDIS__CONNECTION__HOST: redis
           MOVIE__REDIS__CONNECTION__PORT: 6379
+      - name: Install dependencies for Codecov
+        run: apt-get update && apt-get install -y git curl gpg
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
