--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,8 @@ log_cli_level = "INFO"
 # settings mypy
 [tool.mypy]
 strict = true
-mypy_path = "movie"
 ignore_missing_imports = true
+explicit_package_bases = true
 plugins = [
     "pydantic.mypy",
 ]
